saas/k8s/003-data/080-minio/50-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minio
  namespace: data
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  rules:
    - host: kib.data.davar.com
      http:
        paths:
          - backend:
              serviceName: minio-internal-service
              servicePort: 9000
            path: /
  tls:
    - hosts:
        - minio.data.davar.com
      secretName: minio-data-tls
